--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -10,4 +10,5 @@
 @import "./navbar.scss";
 @import "./landing.scss";
 @import "./dashboard.scss";
+@import "./friends.scss";
 @import "./auth.scss";
