--- a/client/src/styles/_colors.scss
+++ b/client/src/styles/_colors.scss
@@ -1,6 +1,6 @@
 $light-green: #CAC481;
 $pastel-green:#c1e2c2;
 $green: #8DA350;
-$greener: #8DA350;
+$greener: #6f8531;
 $yellow: #F1C650;
 $white: #FFFEF0;
