--- a/client/src/styles/global.scss
+++ b/client/src/styles/global.scss
@@ -21,6 +21,15 @@ html,body {
     transition: all $t-dur ease-out;
 }
 
+.landing-container {
+    height: 50%;
+    max-width: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;  
+}
+
 .container-wrap {
     height:100vh;
 }
@@ -29,13 +38,4 @@ a {
     color:black;
     text-decoration: none;
     cursor:pointer;
-}
-.front-img{
-    width:90vw;
-    position:absolute;
-    margin:auto;
-    bottom:-20vw;
-    left:0;
-    right:0;
-    z-index:0;
 }
