added half of front page, customized css

--- a/client/src/styles/auth.scss
+++ b/client/src/styles/auth.scss
@@ -27,6 +27,9 @@ form {
             background-color:$yellow;
             font-weight:600;
             cursor:pointer;
+            &:hover {
+                background-color: $green;
+            }
         }
     }
 }
