--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -12,3 +12,6 @@
 @import "./dashboard.scss";
 @import "./friends.scss";
 @import "./auth.scss";
+@import "./notifs.scss";
+@import "./friendsmodule.scss";
+@import "./gardensmodule.scss";
