--- a/client/src/styles/navbar.scss
+++ b/client/src/styles/navbar.scss
@@ -1,5 +1,4 @@
 #navbar {
-    position:absolute;
     top:0;
     width:calc(100vw - 4rem);
     background-color:$pastel-green;
@@ -8,7 +7,8 @@
     display:flex;
     justify-content: space-between;
     align-items: center;
-    font-size:2rem;
+    font-size:1.2rem;
+
     .logo-wrap {
         display:flex;
         align-items: center;
@@ -16,11 +16,22 @@
     }
     .logo {
         width:2em;
+        cursor: pointer;
+        &:hover {
+            opacity:0.7;
+        }
     }
 
     .links {
         display:flex;
+        align-items: center;
         column-gap:2rem;
+    }
+    .link {
+        color:$greenest;
+        &:hover {
+            color:$green
+        }
     }
 
     a {
@@ -28,4 +39,17 @@
         color:black;
         text-decoration: none;
     }
+}
+
+
+.all-wrapper {
+    position: absolute;
+    top:0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+.notifs-wrapper {
+    width:20vw;
+    padding-right:10vw;
 }
