added create-garden page

--- a/client/src/styles/_colors.scss
+++ b/client/src/styles/_colors.scss
@@ -2,6 +2,7 @@ $light-green: #CAC481;
 $pastel-green:#c1e2c2;
 $green: #8DA350;
 $greener: #6f8531;
+$pastel-yellow: #ffefc3;
 $yellow: #F1C650;
 $white: #FFFEF0;
 $error: #FF6961;
