--- a/client/src/styles/dashboard.scss
+++ b/client/src/styles/dashboard.scss
@@ -12,7 +12,7 @@
     .friends-component {
         display: inline-flex;
         width:max(40vw, 40%);
-        height:fit-content
+        height:fit-content;
     }
 
 
