--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -13,5 +13,6 @@
 @import "./friends.scss";
 @import "./auth.scss";
 @import "./notifs.scss";
+@import "./creategarden.scss";
 @import "./friendsmodule.scss";
 @import "./gardensmodule.scss";
