--- a/client/src/styles/friendsmodule.scss
+++ b/client/src/styles/friendsmodule.scss
@@ -1,5 +1,5 @@
 #friendsModule {
-    height:60vh;
+    height:70vh;
     width:max(30%, 30vw);
     padding: 15px;
     background-color: $pastel-green;
@@ -7,6 +7,10 @@
     display: flex;
     flex-direction: column;
     text-align: center;
+    -webkit-box-shadow: 0px 7px 6px -2px rgba(0,0,0,0.3);
+    -moz-box-shadow: 0px 7px 6px -2px rgba(0,0,0,0.3);
+    box-shadow: 0px 7px 6px -2px rgba(0,0,0,0.3);
+    
 
     h2 {
         font-weight: 600;
