--- a/client/src/styles/gardensmodule.scss
+++ b/client/src/styles/gardensmodule.scss
@@ -1,5 +1,5 @@
 #gardensModule {
-    height:60vh;
+    height:50vh;
     width:max(50%, 50vw);
     padding: 15px;
     background-color: $pastel-green;
@@ -7,18 +7,25 @@
     display: flex;
     flex-direction: column;
     text-align: center;
+    -webkit-box-shadow: 0px 7px 6px -2px rgba(0,0,0,0.3);
+    -moz-box-shadow: 0px 7px 6px -2px rgba(0,0,0,0.3);
+    box-shadow: 0px 7px 6px -2px rgba(0,0,0,0.3);
+    
 
     h2 {
         font-weight: 600;
         font-size: 2rem;
         color: $greenest;
+        text-align: left;
+        padding-left:30px
     }
     
     .gardens-list {
+        max-height: 70%;
         background-color: $white;
         padding: 8px;
-        display: inline-flexbox;
-        overflow-y:auto;
+        justify-content: flex-start;
+        display: inline-flex;
         flex-direction: row;
         align-items: center;
         height:90%;
@@ -27,21 +34,58 @@
         overflow-x: scroll;
     }
 
-
-    .garden {
+    button {
         display: inline-flex;
-        height: 90%;
-        flex-direction: column;
         justify-content: center;
         align-items: center;
-        background-color: $green;
+        height:10%;
+        width: 40%;
+        background-color:$yellow;
+        cursor: pointer;
+        border-style: none;
+        color: $greenest;
+        border-radius:10px;
+        &:hover {
+            background-color: $greener;
+        }}
+    
+        h3 {
+            display: inline-flex;
+            color: $green;
+            margin: 0;
+        }
+        p {
+            display: inline-flex;
+            color: $greener;
+            margin: 0;
+        }
+
+
+    .garden {
+        cursor: pointer;
+        display: inline-flex;
+        height: 90%;
+        max-width: 30%;
+        flex-direction: column;
+        justify-content: center;
+        gap: 1rem;
+        align-items: center;
+        background-color: $pastel-yellow;
         border-radius: 25px;
-        padding: 4px;
+        padding: 10px;
         &:hover {
             opacity: 0.7;
         }
     }
-    
+    img { height:100%
+    }
+    .img-wrapper {
+        display: inline-flex;
+        border-radius: 25px;
+        padding: 10px;
+        background-color: $yellow;
+        height:50%;
+    }
     .text {
         font-size: 1.2rem;
         color: $white;
