--- a/client/src/styles/navbar.scss
+++ b/client/src/styles/navbar.scss
@@ -8,6 +8,10 @@
     justify-content: space-between;
     align-items: center;
     font-size:1.2rem;
+    -webkit-box-shadow: 0px 7px 6px -2px rgba(0,0,0,0.3);
+    -moz-box-shadow: 0px 7px 6px -2px rgba(0,0,0,0.3);
+    box-shadow: 0px 7px 6px -2px rgba(0,0,0,0.3);
+
 
     .logo-wrap {
         display:flex;
