--- a/client/src/styles/notifs.scss
+++ b/client/src/styles/notifs.scss
@@ -5,6 +5,9 @@
     background-color: $pastel-green;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 20px;
+    -webkit-box-shadow: 10px 28px 45px -3px rgba(0,0,0,0.1);
+    -moz-box-shadow: 10px 28px 45px -3px rgba(0,0,0,0.1);
+    box-shadow: 10px 28px 45px -3px rgba(0,0,0,0.1);
     padding: 10px;
     align-items: center;
     
