--- a/client/src/styles/creategarden.scss
+++ b/client/src/styles/creategarden.scss
@@ -29,6 +29,7 @@
             width: 70%;
             
             input {
+                text-align: center;
                 width: 90%;
                 border: 0;
                 padding: 4px;
@@ -45,7 +46,7 @@
               
               .line {
                 position: absolute;
-                bottom: 3px;
+                bottom: 0px;
                 background-color: $green;
                 height: 4px;
                 width: 100%;
@@ -70,6 +71,9 @@
             border-radius:30px;
             background-color:$pastel-yellow;
             gap: 1rem;
+            -webkit-box-shadow: 0px 7px 6px -2px rgba(0,0,0,0.3);
+            -moz-box-shadow: 0px 7px 6px -2px rgba(0,0,0,0.3);
+            box-shadow: 0px 7px 6px -2px rgba(0,0,0,0.3);        
         }
 
         .choose-wrapper {
@@ -119,14 +123,14 @@
         .plant-display-wrapper {
             width: 100%;
             color: $greener;
+            text-align: center;
+        }
 
-
+        .garden {
+            width: 100%;
+            padding: 10px;
+        }
         .submit {
             width: 100%;
         }
-        }
-
-
-        
-    
 }
