--- a/client/src/styles/navbar.scss
+++ b/client/src/styles/navbar.scss
@@ -52,6 +52,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+    z-index: 99;
 }
 .notifs-wrapper {
     width:20vw;
