--- a/client/src/styles/notifs.scss
+++ b/client/src/styles/notifs.scss
@@ -10,6 +10,7 @@
     box-shadow: 10px 28px 45px -3px rgba(0,0,0,0.1);
     padding: 10px;
     align-items: center;
+    z-index: 98;
     
     h2 {
         color: $greenest
