able to make friend requests

--- a/client/src/styles/navbar.scss
+++ b/client/src/styles/navbar.scss
@@ -26,6 +26,20 @@
         }
     }
 
+    .currency {
+        display: inline-flex;
+        flex-direction: row-reverse;
+        align-items: center;
+        gap: 8px;
+
+        color: $greenest;
+
+        & img {
+        width:1.2em;
+        height:60%;
+        }
+    }
+
     .links {
         display:flex;
         align-items: center;
