--- a/client/src/styles/friends.scss
+++ b/client/src/styles/friends.scss
@@ -2,7 +2,6 @@
 
     display:flex;
     flex-direction: column;
-    // justify-content: center;
     align-items: center;
     width:100%;
     padding:2rem;
@@ -61,6 +60,7 @@
 
 
         .request {
+            position: relative;
             display: inline-flex;
             flex-direction: row;
             justify-content: space-between;
@@ -70,6 +70,7 @@
             border-radius:10px;
             color: $greener;
             &:hover {
+                cursor: pointer;
                 background-color: #e1eee1;
                 color: adjust-hue($color: #000000, $degrees: 2)
             }
