--- a/client/src/styles/friendsmodule.scss
+++ b/client/src/styles/friendsmodule.scss
@@ -52,6 +52,7 @@
 
     .friend {
         display: inline-flex;
+        position: relative;
         width: 90%;
         cursor: pointer;
         flex-direction: row;
@@ -60,6 +61,7 @@
         border-radius: 25px;
         padding: 4px;
         color: $white;
+        z-index: 1;
         &:hover {
             background-color: $pastel-green;
             color:$greenest;
@@ -68,6 +70,7 @@
     
     .text {
         font-size: 1.2rem;
+        z-index: 10;
         &:hover {
             color:$greener;
         }
@@ -82,77 +85,5 @@
             color: $greener;
         }
     }
-
-        
-    .modal-buttonWrapper {
-        height: 100%;
-        width: 100%;
-    }
-
-
-    .search {
-        text-align:center;
-        background: none;
-        border-bottom: $greener;
-        color: $greener;
-        border: none;
-        border-bottom: solid 3px $greener;
-        width: 100%;
-        height: 30px;
-        form { 
-            flex-direction: row;
-            column-gap:1rem;
-        }
-    }
-    .list {
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
-        overflow-y: scroll;
-        flex-direction: column;
-        gap: 2px;
-        padding: 10px;
-        height: 30vh;
-        width: 20vw;
-        margin: 5vh;
-        background-color: $white;
-        border-radius: 25px;
-    }
-
-    .name {
-        display: inline-flex;
-        width: 90%;
-        cursor: pointer;
-        flex-direction: row;
-        justify-content: center;
-        background-color: $green;
-        border-radius: 25px;
-        padding: 4px;
-        color: $white;
-        &:hover {
-            background-color: $pastel-green;
-            color:$greenest;
-        }
-    }
-
-    .chosen {
-        background-color: $pastel-yellow;
-        color: $green;
-    }
-
-    .submit {
-        display: inline-flex;
-        justify-content: center;
-        align-items: center;
-        height: 5vh;
-        width: 90%;
-        background-color:$yellow;
-        cursor: pointer;
-        border-style: none;
-        color: $greenest;
-        border-radius:10px;
-        &:hover {
-            background-color: $greener;
-        }
-    }
 }
+
