--- a/client/src/styles/gardensmodule.scss
+++ b/client/src/styles/gardensmodule.scss
@@ -41,7 +41,7 @@
         align-items: center;
         border-radius: 25px;
         gap: 1rem;
-        overflow-x: scroll;
+        overflow-x: auto;
     }
 
     button {
