--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -18,3 +18,5 @@
 @import "./gardensmodule.scss";
 @import "./minigarden.scss";
 @import "./modal.scss";
+@import "./garden.scss";
+@import "./inventory.scss";
