--- a/client/src/styles/gardensmodule.scss
+++ b/client/src/styles/gardensmodule.scss
@@ -1,5 +1,5 @@
 #gardensModule {
-    height:50vh;
+    height:40vh;
     width:max(50%, 50vw);
     padding: 15px;
     background-color: $pastel-green;
@@ -28,11 +28,12 @@
         font-size: 2rem;
         color: $greenest;
         text-align: center;
-        padding-left:30px
+        margin:8px;
+
     }
     
     .gardens-list {
-        height: 70%;
+        height: 80%;
         background-color: $white;
         padding: 8px;
         justify-content: flex-start;
@@ -42,6 +43,7 @@
         border-radius: 25px;
         gap: 1rem;
         overflow-x: auto;
+        overflow-y: auto;
     }
 
     button {
@@ -75,11 +77,11 @@
         position: relative;
         cursor: pointer;
         display: inline-flex;
-        height: 90%;
+        height: 80%;
         max-width: 30%;
         flex-direction: column;
         justify-content: center;
-        gap: 1rem;
+        gap: 0.5rem;
         align-items: center;
         background-color: $pastel-yellow;
         border-radius: 25px;
